--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "drawing-game",
   "version": "0.1.0",
   "private": true,
+  "main": "server/server.js",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
