--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "main": "server/server.js",
-  "proxy": "http://localhost:4000",
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.13.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
